Extend Proxy principal with restriction content.